[build-system]
requires = ["setuptools>=75.8.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "panda-mujoco-gym"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mujoco==2.3.3",
    "gymnasium==0.29.1",
    "stable-baselines3==2.2.1",
    "tensorboard>=2.19.0",
    "h5py>=3.13.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["panda_mujoco_gym*"]

[tool.setuptools.package-data]
"panda_mujoco_gym_og" = ["assets/**/*"]
